# escape-artist

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  notes.md
.github/workflows/: release.yml
embed/: floating-ui.core.js  floating-ui.dom.js  help.html  htm.js  index.html  preact.js  script.js  tailwindplay.js
src/: main.rs
src/snapshots/: bash_starship_prompt.input  escape_artist__bash_starship_prompt.snap  escape_artist__nu_prompt.input  escape_artist__nu_prompt.snap  escape_artist__set_bold.snap
