[package]
name = "escape-artist"
description = "A visualizer for terminal escape sequences"
homepage = "https://github.com/rgwood/escape-artist"
repository = "https://github.com/rgwood/escape-artist"
version = "0.5.9"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
crossterm = "0.26.1"
portable-pty = "0.8.1"
vte = "0.11.0"

axum = { version = "0.6.12", features = ["macros", "ws"] }
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
clap = { version = "4.2.1", features = ["derive"] }
itertools = "0.10.5"
rust-embed = { version = "6.6.1", features = ["axum-ex"] }
mime_guess = "2.0.4"
open = "4.0.2"
rand = "0.8.5"
signal-hook = "0.3.15"

[profile.release]
lto = true      # Enable Link Time Optimization
opt-level = 'z' # Optimize for size.
panic = 'abort' # Abort on panic

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }
serde_yaml = "0.9"


# codegen-units = 1 # Set low to increase optimizations. Kills compile time though
# strip = true        # Strip symbols from binary. Big gains but idk if it's worth bad stack traces
