[package]
name = "escape-artist"
description = "A visualizer for terminal escape sequences"
homepage = "https://github.com/rgwood/escape-artist"
repository = "https://github.com/rgwood/escape-artist"
version = "0.6.6"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
is-docker = "0.2.0"

[dependencies]
anyhow = "1.0.70"
crossterm = "0.27.0"
portable-pty = "0.8.1"

axum = { version = "0.7.4", features = ["macros", "ws"] }
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
rust-embed = { version = "8.2.0", features = ["axum-ex"] }
mime_guess = "2.0.4"
open = "5.0.1"
rand = "0.8.5"
signal-hook = "0.3.15"
termwiz = "0.22.0"
ansi_colours = "1.2.2"
iconify = "0.3.0"

[profile.release]
lto = true      # Enable Link Time Optimization
opt-level = 'z' # Optimize for size.
panic = 'abort' # Abort on panic


# codegen-units = 1 # Set low to increase optimizations. Kills compile time though
# strip = true        # Strip symbols from binary. Big gains but idk if it's worth bad stack traces
